--- a/.env.exemple
+++ b/.env.exemple
@@ -1,2 +1,8 @@
 MONGO_DSN=mongodb://root:root@db/nest?authSource=admin
 SECRET: 
+
+AWS__S3_BUCKET_NAME=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
