--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
+    "aws-sdk": "^2.891.0",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "crypto": "^1.0.1",
     "mongoose": "^5.12.4",
+    "multer-s3": "^2.9.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -44,10 +46,12 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^3.0.1",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/multer": "^1.4.5",
+    "@types/multer-s3": "^2.7.9",
     "@types/node": "^14.14.36",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
